# C_Android_AudioVideo_FFMpeg

./: README.md
FFmpegDemoBase/app/src/main/: AndroidManifest.xml
FFmpegDemoBase/app/src/main/res/layout/: activity_main.xml
FFmpegDemoBase/ffmpeglib/: build.gradle
FFmpegDemoBase/ffmpeglib/src/main/cpp/: CMakeLists.txt  ffmpeg_version.cpp
MusicPlayer/: README.md
MusicPlayer/app/: build.gradle
MusicPlayer/app/src/main/cpp/: ffmpeg_voicer.c
NDK_Base - 副本/app/src/main/: AndroidManifest.xml
NDK_Base - 副本/yuv_lib/: build.gradle
NDK_Base - 副本/yuv_lib/src/main/cpp/: native-lib.cpp
NDK_Base/app/: build.gradle
NDK_Base/app/src/main/res/layout/: activity_main.xml
NDK_Base/app/src/main/res/values/: strings.xml  themes.xml
NDK_Base/gradle/wrapper/: gradle-wrapper.properties
NDK_Base/yuv_lib/src/main/cpp/: CMakeLists.txt
OpenSLES_Demo/app/: build.gradle
OpenSLES_Demo/app/src/main/: AndroidManifest.xml
OpenSLES_Demo/app/src/main/cpp/: native-lib.cpp
OpenSLES_Demo/app/src/main/res/layout/: activity_main.xml
OpenSLES_Demo/app/src/main/res/values/: strings.xml
OpenSLES_Demo/gradle/wrapper/: gradle-wrapper.properties
YuvTest/: settings.gradle
YuvTest/app/: build.gradle
YuvTest/app/src/main/: AndroidManifest.xml
YuvTest/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_surfaceview.xml
YuvTest/app/src/main/res/values/: themes.xml
YuvTest/gradle/wrapper/: gradle-wrapper.properties
YuvTest/yuv_lib/: build.gradle
YuvTest/yuv_lib/src/main/: AndroidManifest.xml
YuvTest/yuv_lib/src/main/cpp/: CMakeLists.txt  YuvJni.cpp  native-lib.cpp
android_ffmpeg/FFmpegDemo/: README.md
android_ffmpeg/FFmpegDemo/app/src/main/: AndroidManifest.xml
android_ffmpeg/FFmpegDemo/app/src/main/res/layout/: activity_ffmpeg0_version.xml  activity_ffmpeg10_videotojpg.xml  activity_ffmpeg11_videocut.xml  activity_ffmpeg2_log.xml  activity_ffmpeg3_file.xml  activity_ffmpeg4_avmeta.xml  (+5 more)
android_ffmpeg/FFmpegDemo/ffmpeglib/src/main/: AndroidManifest.xml
android_ffmpeg/FFmpegDemo/ffmpeglib/src/main/cpp/: CMakeLists.txt  android_log.h  ffmpeg0_version.cpp  ffmpeg10_videotojpg.cpp  ffmpeg1_baseinfo.cpp  ffmpeg2_log.cpp  ffmpeg3_file.cpp  ffmpeg4_avmeta.cpp  ffmpeg5_extractaudio.cpp  ffmpeg6_extractvideo.cpp  ffmpeg7_mp4toflv.cpp  ffmpeg8_mp4cut.cpp  ffmpeg9_yuvtoh264.cpp  ffmpeg_info.cpp  ffmpeg_remux.cpp
android_ndk_learn/: README.md  settings.gradle
android_ndk_learn/eg1/src/main/cpp/: native-lib.cpp
android_ndk_learn/eg10/: build.gradle
android_ndk_learn/eg10/src/main/: AndroidManifest.xml
android_ndk_learn/eg10/src/main/cpp/: CMakeLists.txt  NDKFFmpeg.cpp  NDKFFmpeg.h
android_ndk_learn/eg10/src/main/res/layout/: activity_main.xml
android_ndk_learn/eg11/: build.gradle
android_ndk_learn/eg11/src/main/: AndroidManifest.xml
android_ndk_learn/eg11/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android_ndk_learn/eg3/src/main/cpp/: native-lib.cpp
android_ndk_learn/eg4/src/main/cpp/: native-lib.cpp
android_ndk_learn/eg8/src/main/cpp/: native-lib.cpp
android_ndk_learn/gradle/wrapper/: gradle-wrapper.properties
audio_video_study/: README.md  settings.gradle
audio_video_study/eg15/: build.gradle
audio_video_study/eg15/src/main/: AndroidManifest.xml
audio_video_study/eg19/: build.gradle
audio_video_study/eg19/src/main/: AndroidManifest.xml
musicplayer/app/src/main/: AndroidManifest.xml
musicplayer/app/src/main/cpp/: CMakeLists.txt
musicplayer/gradle/wrapper/: gradle-wrapper.properties
opencv_face0/: settings.gradle
opencv_face0/app/: build.gradle
opencv_face0/app/src/main/: AndroidManifest.xml
opencv_face0/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
opencv_face0/app/src/main/res/layout/: activity_main.xml
opencv_face0/app/src/main/res/values/: strings.xml  themes.xml
opencv_face0/app/src/main/res/values-night/: themes.xml
opencv_face0/gradle/wrapper/: gradle-wrapper.properties
(+82 files in other folders)
